--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,7 +2,8 @@
 #
 # These owners will be the default owners for everything in
 # the repo, unless a later match takes precedence.
-* @madskristensen @hyperupcall
+# * @madskristensen @hyperupcall
+* @hyperupcall
 
 # Managed by Ansible DevTools Team members:
 src/schemas/json/ansible-* @ssbarnea @webknjaz
