--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # This ignore file is shared with Prettier. It seems .git/ must be ignored manually now.
 .git/
 
+# Reports generated with "node ./cli.js report"
+reports/
+
 # Project files
 temp
 test.json
