--- a/.github/workflows/build-schemas.yml
+++ b/.github/workflows/build-schemas.yml
@@ -24,6 +24,7 @@ jobs:
   # Build job
   build:
     runs-on: 'ubuntu-latest'
+    permissions: 'write-all'
     steps:
       - uses: 'actions/checkout@v4'
       - run: |
