--- a/.github/workflows/build-schemas.yml
+++ b/.github/workflows/build-schemas.yml
@@ -24,7 +24,8 @@ jobs:
   # Build job
   build:
     runs-on: 'ubuntu-latest'
-    permissions: 'write-all'
+    permissions:
+      contents: 'read'
     steps:
       - uses: 'actions/checkout@v4'
       - run: |
