--- a/.github/workflows/build-schemas.yml
+++ b/.github/workflows/build-schemas.yml
@@ -30,8 +30,8 @@ jobs:
       - uses: 'actions/checkout@v4'
       - run: |
           echo "$RANDOM" > file
-          git config --global user.email 'me@example.com'
-          git config --global user.name '${{ github.actor }}'
+          git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
+          git config --global user.name 'github-actions[bot]'
           git add file
           git commit -m "Update file"
           # git push -u origin
