--- a/.github/workflows/build-schemas.yml
+++ b/.github/workflows/build-schemas.yml
@@ -31,9 +31,9 @@ jobs:
       - uses: 'actions/checkout@v4'
       - run: |
           echo "$RANDOM" > file
-          git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-          git config --global user.name 'github-actions[bot]'
-          git add file
-          git commit -m "Update files"
+          # git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
+          # git config --global user.name 'github-actions[bot]'
+          # git add file
+          # git commit -m "Update files"
           # git push -u origin
       - uses: peter-evans/create-pull-request@v7
